hphp/test/zend/good/Zend/tests/bug60611.php.expectf

Fatal error: Method name must be a string in %s/bug60611.php on line 8
